- Fixed bug #46897: ob_flush() should fail to flush unerasable buffers - Added test for bug46897 - A memleak has been identified while fixing this bug but the changes   made by this commit do not affect ob_get_clean where the memleak (which   is fixed in HEAD with the new handler) resides. - [DOC] New noticed is outputted in ob_flush when the buffer is unerasable